tests/fail/invariance-bad-usage.stderr
error[E0597]: `string` does not live long enough
  --> tests/fail/invariance-bad-usage.rs:24:38
   |
17 |     let long: Box<dyn Any<Inv<'static>>> = static_.transcend();
   |               -------------------------- type annotation requires that `string` is borrowed for `'static`
18 |     {
19 |         let string = "short".to_string();
   |             ------ binding `string` declared here
...
24 |         let shortened = shrink(long, &string);
   |                                      ^^^^^^^ borrowed value does not live long enough
25 |         assert_eq!(shortened.type_id(), std::any::TypeId::of::<usize>())
26 |     }
   |     - `string` dropped here while still borrowed
